# phoenix-monorepo-clean

./: .gitignore  ARCHITECTURE.md  AUDIT_CODE_MORT_COMPLETED.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  ORACLE_DIRECTIVES.md  RAILWAY_DEPLOYMENT_STEPS.md  README.md  README_FR.md  SPRINT_4_VALIDATION_ORACLE.md  apply_phoenix_migrations.sh  claude_code_setup.md  claude_impl_validation.md  init_phoenix_mono.sh  luna_beta_report.md  luna_beta_validate.sh  migration-log.txt  monitoring-config.yaml  railway.json  railway.multi-spa.json  test-ai-services-integration.js  test-multi-spa-integration.js  test-production-readiness.js  validate_luna_impl.py
apps/phoenix-agent-ia/: .env.example  Dockerfile  main.py  pyproject.toml
apps/phoenix-backend-unified/: .api_keys_metadata.json  .env.example  .luna_rebuild_trigger  .rebuild_trigger  DOCKERFILE_REBUILD_TRIGGER.txt  Dockerfile  Dockerfile.bak  JOURNAL_NARRATIF_IMPLEMENTATION.md  ORACLE_DIRECTIVES.md  PHOENIX_LUNA_HUB_V2_DOCUMENTATION.md  SPRINT_1_VALIDATION.md  api_main.py  cache_bust.txt  main.py  pyproject.toml  requirements.txt  supabase_minimal_users_only.sql  supabase_schema.sql  supabase_schema_minimal.sql  version.txt
apps/phoenix-backend-unified/app/api/: aube_endpoints.py  auth_endpoints.py  billing_endpoints.py  cache_monitoring_endpoints.py  capital_narratif_endpoints.py  connection_monitoring_endpoints.py  key_rotation_endpoints.py  luna_endpoints.py  luna_narrative_endpoints.py  monitoring_endpoints.py  rate_limit_endpoints.py  refund_endpoints.py
apps/phoenix-backend-unified/app/billing/: stripe_manager.py
apps/phoenix-backend-unified/app/core/: api_key_manager.py  celebration_engine.py  connection_manager.py  energy_manager.py  energy_preview_service.py  event_store_supabase.py  events.py  gdpr_decorator.py  journal_service.py  jwt_manager.py  llm_gateway.py  logging_config.py  luna_core_service.py  metrics_collector.py  narrative_analyzer.py  rate_limiter.py  redis_cache.py  (+4 more)
apps/phoenix-backend-unified/artifacts/: AUDIT-FINAL-REPORT.md  energy-system-validation-audit.md  environment-audit.md  rapid-audit-completion.md  requirements-locked.txt
apps/phoenix-backend-unified/config/: energy_grid.yaml
apps/phoenix-backend-unified/core/: aube_futureproof_service.py  security.py
apps/phoenix-backend-unified/migrations/: add_gdpr_tables.sql  fix_energy_transactions_conflict.sql  phoenix_v2_ultra_safe.sql
apps/phoenix-backend-unified/sql/: add_events_indexes.sql  complete_events_schema.sql
apps/phoenix-backend-unified/tests/: conftest.py  test_api_key_rotation.py  test_aube_e2e.py  test_aube_mvp_integration.py  test_billing_integration_light.py  test_energy_manager.py  test_energy_persistence.py  test_event_store_deduplication.py  test_gdpr_compliance.py  test_integration_sprint2.py  test_journal_narratif.py  test_luna_final_demo.py  test_metrics_system.py  test_narrative_analyzer_performance.py  test_progress_loop.py  test_rate_limiting.py  test_redis_cache_integration.py  test_security_fail_secure.py  test_security_fail_secure_unit.py  test_simple_validation.py
apps/phoenix-iris-api/: Dockerfile  main.py  pyproject.toml
phoenix-api/: Dockerfile  pyproject.toml  requirements.txt
phoenix-api/app/: dependencies.py  main.py
phoenix-api/app/clients/: gemini_client.py  hub_client.py
phoenix-api/app/core/: config.py
phoenix-api/app/routers/: aube.py  cv.py  letters.py  rise.py
(+537 files in other folders)
