[tool.poetry]
name = "phoenix-backend-unified"
version = "1.0.0"
description = "Phoenix Backend Unified - Clean Reset"
authors = ["Phoenix Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.9"
# Luna Hub Dependencies
supabase = "^2.3.0"
stripe = "^7.0.0"
google-generativeai = "^0.3.0"
# Security & Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# Background tasks & Redis
celery = "^5.3.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
